replace-install-octane-collector.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: octane-collector
  name: octane-collector
---
# Kube State Metrics Service
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: octane-collector
  labels:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/instance: "kube-state-metrics"
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: "ClusterIP"
  ports:
    - name: "http"
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/instance: kube-state-metrics
---
# Kube State Metrics Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: octane-collector
  labels:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/instance: "kube-state-metrics"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-state-metrics
        app.kubernetes.io/instance: "kube-state-metrics"
    spec:
      hostNetwork: false
      serviceAccountName: octane-collector
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 65534
      containers:
        - name: kube-state-metrics
          args:
            - --metric-whitelist=kube_node_info,kube_node_labels,kube_node_status_capacity,kube_pod_info,kube_pod_labels,kube_pod_container_resource_requests,kube_pod_container_resource_limits,kube_persistentvolumeclaim_info,kube_pod_spec_volumes_persistentvolumeclaims_info,kube_persistentvolumeclaim_resource_requests_storage_bytes
            - --collectors=persistentvolumeclaims
            - --collectors=pods
            - --collectors=nodes
          imagePullPolicy: IfNotPresent
          image: "quay.io/coreos/kube-state-metrics:v1.9.7"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
---
# Metrics Server Service
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: octane-collector
  labels:
    app: metrics-server
    release: metrics-server
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: metrics-server
    release: metrics-server
  type: ClusterIP
---
# Metrics Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: octane-collector
  labels:
    app: metrics-server
    release: metrics-server
spec:
  selector:
    matchLabels:
      app: metrics-server
      release: metrics-server
  replicas: 1
  template:
    metadata:
      labels:
        app: metrics-server
        release: metrics-server
    spec:
      serviceAccountName: octane-collector
      containers:
        - name: metrics-server
          image: "k8s.gcr.io/metrics-server-amd64:v0.3.6"
          imagePullPolicy: IfNotPresent
          command:
            - /metrics-server
            - --cert-dir=/tmp
            - --logtostderr
            - --secure-port=8443
            - --kubelet-insecure-tls=true
            - --kubelet-preferred-address-types=InternalIP
          ports:
            - containerPort: 8443
              name: https
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
---
# Kube-netc Daemon Set
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-netc
  namespace: octane-collector
spec:
  selector:
    matchLabels:
      name: kube-netc
  template:
    metadata:
      labels:
        name: kube-netc
    spec:
      serviceAccountName: octane-collector
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: kube-netc
        image:  us.gcr.io/octane-public/kube-netc:latest
        args: ["-v", "info"]
        imagePullPolicy:  Always
        ports:
        - containerPort: 2112
          protocol: TCP
        - containerPort: 9655
          protocol: TCP
        resources: {}
        securityContext:
          privileged: true
        volumeMounts:
          - name: debug
            mountPath: /sys/kernel/debug
          - name: bpf
            mountPath: /sys/fs/bpf
          - name: cgroup
            mountPath: /sys/fs/cgroup
          - name: tmp
            mountPath: /tmp
      volumes:
      - name: bpf
        hostPath:
          path: /sys/fs/bpf
      - name: cgroup
        hostPath:
          path: /sys/fs/cgroup
      - name: debug
        hostPath:
          path: /sys/kernel/debug
      - name: tmp
        emptyDir: {}
      terminationGracePeriodSeconds: 10
---
# Octane Collector Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: octane-collector
  name: octane-collector
  namespace: octane-collector
spec:
  selector:
    app: octane-collector
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
# Octane Collector Stateful Set
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: octane-collector
  name: octane-collector
  namespace: octane-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octane-collector
  serviceName: octane-collector
  template:
    metadata:
      labels:
        app: octane-collector
    spec:
      serviceAccountName: octane-collector
      containers:
        - name: ledger
          image: "us.gcr.io/octane-public/octane-collector:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: queue-data
              mountPath: /queue
  volumeClaimTemplates:
    - metadata:
        name: queue-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "10Gi"
